# dmntk.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  REFERENCES.md  Taskfile.yml  coverage.sh  docker.sh
common/: Cargo.toml  LICENSE-MIT  README.md
common/src/: ascii_ctrl.rs  errors.rs  examples.rs  href.rs  jsonify.rs  lib.rs  macros.rs
dmntk/: Cargo.toml  README.md
dmntk/examples/ex1/: ex1.ctx  ex1.feel
dmntk/examples/ex2/: ex2.ctx  ex2.feel
dmntk/src/: actions.rs  cli.yml  dto.rs  errors.rs  main.rs  server.rs  workspace.rs
dmntk/src/examples/: mod.rs
evaluator/: Cargo.toml  README.md
evaluator/src/: lib.rs  test_files.rs
feel/: Cargo.toml  LICENSE-APACHE  README.md
feel-evaluator/: Cargo.toml  README.md
feel-evaluator/benches/: addition.rs  bif_abs.rs  subtraction.rs
feel-evaluator/src/: builders.rs  errors.rs  evaluators.rs  iterations.rs  lib.rs
feel-evaluator/src/bifs/: core.rs  mod.rs  named.rs  positional.rs
feel-evaluator/src/tests/: addition.rs  arithmetic_negation.rs  built_in_functions.rs  comments.rs  comparison_between.rs  comparison_eq.rs  comparison_ge.rs  comparison_gt.rs  comparison_in.rs  comparison_le.rs  comparison_lt.rs  comparison_ne.rs  conjunction.rs  disjunction.rs  division.rs  empty_input.rs  every_expression.rs  exponentiation.rs  filter.rs  for_expression.rs  function_invocation.rs  if_expression.rs  instance_of.rs  join.rs  list.rs  literal_at.rs  literal_boolean.rs  mod.rs  multiline.rs  multiplication.rs  name.rs  negation.rs  parentheses.rs  properties.rs  range.rs  some_expression.rs  subtraction.rs  unary_tests.rs
feel-evaluator/src/tests/bifs/: bif_abs.rs  bif_after.rs  bif_all.rs  bif_any.rs  bif_append.rs  bif_before.rs  bif_ceiling.rs  bif_coincides.rs  bif_concatenate.rs  bif_contains.rs  bif_count.rs  bif_date.rs  bif_date_time.rs  bif_day_of_week.rs  bif_day_of_year.rs  bif_decimal.rs  bif_distinct_values.rs  bif_duration.rs  bif_during.rs  bif_ends_with.rs  bif_even.rs  bif_exp.rs  bif_finished_by.rs  bif_finishes.rs  bif_flatten.rs  bif_floor.rs  bif_get_entries.rs  bif_get_value.rs  bif_includes.rs  bif_index_of.rs  bif_insert_before.rs  bif_is.rs  bif_list_contains.rs  bif_log.rs  bif_lower_case.rs  bif_matches.rs  bif_max.rs  bif_mean.rs  bif_median.rs  bif_meets.rs  (+35 more)
feel-grammar/: Cargo.toml  README.md
feel-grammar/src/: extractor.rs  feel.y  gen.sh  generator.rs  lib.rs
feel-number/: Cargo.toml  README.md  build.rs
feel-number/benches/: dec.rs
feel-number/decnumber/: README.md
feel-number/src/: dec.rs  lib.rs  number.rs
feel-parser/: Cargo.toml  README.md  build.rs  coverage.sh
feel-parser/benches/: addition.rs  context.rs  division.rs  filter.rs  function_definition.rs  quantified_expression.rs
feel-parser/src/: lalr.rs  lexer.rs  lib.rs  parser.rs
feel-parser/src/tests/: addition.rs  arithmetic_negation.rs  between.rs  boxed_expression.rs  comment.rs  comparison.rs  conjunction.rs  context.rs  date.rs  disjunction.rs  division.rs  every_expression.rs  exponentiation.rs  expression.rs  filter.rs  for_expression.rs  function_definition.rs  function_invocation.rs  if_expression.rs  instance_of.rs  interval.rs  list.rs  literal.rs  miscellaneous.rs  mod.rs  multiplication.rs  name.rs  numeric_literal.rs  path.rs  range.rs  simple_positive_unary_test.rs  some_expression.rs  subtraction.rs  temporal_date.rs  temporal_date_time.rs  textual_expressions.rs  unary_tests.rs
feel-parser/src/tests/bifs/: bif_abs.rs  bif_list_contains.rs  bif_not.rs  bif_sort.rs  mod.rs
feel-parser/tests/: boxed_expression.rs  expression.rs
feel/benches/: main.rs  name_equal.rs  name_to_string.rs
feel/benches/temporal/: mod.rs
feel/src/: ast.rs  ast_tree.rs  bif.rs  context.rs  evaluator.rs  function.rs  lib.rs  names.rs  numbers.rs  qualified_names.rs  scope.rs  strings.rs  types.rs  values.rs
feel/src/temporal/: date.rs  date_time.rs  dt_duration.rs  errors.rs  mod.rs  time.rs  ym_duration.rs  zone.rs
gendoc/: Cargo.toml  README.md
gendoc/src/: dec_tab.rs  decision_table.rs  generator.rs  lib.rs  svg.rs  template.html
gendoc/src/templates/: decision-table.css  decision-table.html  decision-table.sass  decision_table_template.html  dmn_model_template.html
gendoc/src/tests/: dec_tab.rs  mod.rs
model/: Cargo.toml  README.md
model-evaluator/: Cargo.toml  README.md
model-evaluator/benches/: main.rs
model-evaluator/benches/compliance/: dmn_2_0001.rs  dmn_2_0002.rs  dmn_2_0003.rs  dmn_2_0004.rs  dmn_2_0005.rs  dmn_2_0006.rs  dmn_2_0007.rs  dmn_2_0008.rs  dmn_2_0009.rs  dmn_2_0010.rs  dmn_2_0100.rs  dmn_2_0101.rs  dmn_2_0102.rs  dmn_2_0105.rs  dmn_2_0106.rs  dmn_2_0107.rs  dmn_2_0108.rs  dmn_2_0109.rs  dmn_2_0110.rs  dmn_2_0111.rs  dmn_2_0112.rs  dmn_2_0113.rs  dmn_2_0114.rs  dmn_2_0115.rs  dmn_2_0116.rs  dmn_2_0117.rs  dmn_2_0118.rs  dmn_2_0119.rs  dmn_3_0001.rs  dmn_3_0002.rs  dmn_3_0003.rs  dmn_3_0004.rs  dmn_3_0005.rs  dmn_3_0006.rs  dmn_3_0007.rs  dmn_3_0008.rs  dmn_3_0009.rs  dmn_3_0010.rs  dmn_3_0011.rs  dmn_3_0012.rs  (+76 more)
model-evaluator/src/: errors.rs  eval_bkm.rs  eval_dec.rs  eval_dec_service.rs  lib.rs  model_evaluator.rs
model-evaluator/src/builders/: business_knowledge_model.rs  decision.rs  decision_service.rs  decision_table.rs  input_data.rs  input_data_context.rs  item_definition.rs  item_definition_context.rs  item_definition_type.rs  mod.rs
model-evaluator/src/tests/: mod.rs
model-evaluator/src/tests/compliance/: dmn_2_0001.rs  dmn_2_0002.rs  dmn_2_0003.rs  dmn_2_0004.rs  dmn_2_0005.rs  dmn_2_0006.rs  dmn_2_0007.rs  dmn_2_0008.rs  dmn_2_0009.rs  (+107 more)
model/src/: lib.rs
model/src/model/: mod.rs  parser.rs
recognizer/: Cargo.toml  README.md
recognizer/src/: builder.rs  canvas.rs  errors.rs  lib.rs  plane.rs  point.rs  recognizer.rs  rect.rs
recognizer/src/tests/: builder.rs  canvas.rs  mod.rs  plane.rs  point.rs  recognizer.rs  rect.rs
server/: Cargo.toml  README.md
server/src/: dto.rs  errors.rs  lib.rs  server.rs
workspace/: Cargo.toml  README.md
workspace/src/: errors.rs  lib.rs  workspace.rs
(+76 files in other folders)
