[package]
name = "dmntk-common"
version = "0.0.45-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Common definitions"
documentation = "https://docs.rs/dmntk-common"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.8.21"
uriparse = "0.6.3"