[package]
name = "dmntk"
version = "0.0.44-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Decision Model and Notation Toolkit"
documentation = "https://docs.rs/dmntk"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
actix-web = "3.3.2"
base64 = "0.13.0"
clap = { version = "2.33.3", features = ["yaml"] }
dmntk-common = { path = "../common" }
dmntk-evaluator = { path = "../evaluator" }
dmntk-feel = { path = "../feel" }
dmntk-feel-parser = { path = "../feel-parser" }
dmntk-model = { path = "../model" }
dmntk-recognizer = { path = "../recognizer" }
dmntk-server = { path = "../server" }
dmntk-workspace = { path = "../workspace" }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.8.21"
thiserror = "1.0.30"