[package]
name = "dmntk-evaluator"
version = "0.0.45-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | FEEL and DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = { path = "../common" }
dmntk-feel = { path = "../feel" }
dmntk-feel-evaluator = { path = "../feel-evaluator" }
dmntk-feel-parser = { path = "../feel-parser" }
dmntk-model-evaluator = { path = "../model-evaluator" }