[package]
name = "dmntk-evaluator"
version = "0.0.45"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | FEEL and DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-feel-evaluator = "0.0.45"
dmntk-model-evaluator = "0.0.45"