[package]
name = "dmntk-feel-evaluator"
version = "0.0.45"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | FEEL evaluator"
documentation = "https://docs.rs/dmntk-feel-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = "0.0.45"
dmntk-feel = "0.0.45"
dmntk-feel-parser = "0.0.45"
lazy_static = "1.4.0"
regex = "1.5.4"
thiserror = "1.0.30"