[package]
name = "dmntk-feel-number"
version = "0.0.43"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | FEEL number"
documentation = "https://docs.rs/dmntk-feel-number"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = "0.0.43"
libc = "0.2.112"
lazy_static = "1.4.0"
thiserror = "1.0.30"

[build-dependencies]
cc = "1.0.72"
