[package]
name = "dmntk-feel-parser"
version = "0.0.45"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | FEEL parser"
documentation = "https://docs.rs/dmntk-feel-parser"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parsing-tables = []

[dependencies]
dmntk-common = "0.0.45"
dmntk-feel = "0.0.45"

[dev-dependencies]
difference = "2.0.0"

[build-dependencies]
dmntk-feel-grammar = "0.0.45"