[package]
name = "dmntk-feel"
version = "0.0.45"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | FEEL definitions"
documentation = "https://docs.rs/dmntk-feel"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ascii_tree = "0.1.1"
chrono = "0.4.19"
chrono-tz = "0.6.0"
derivative = "2.2.0"
dmntk-common = "0.0.45"
dmntk-feel-number = "0.0.45"
lazy_static = "1.4.0"
regex = "1.5.4"
thiserror = "1.0.30"