[package]
name = "dmntk-gendoc"
version = "0.0.46"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Documentation generator"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-examples = "0.0.45"
dmntk-model = "0.0.45"