[package]
name = "dmntk-gendoc"
version = "0.0.47-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Documentation generator"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-examples = { path = "../examples" }
dmntk-model = { path = "../model" }

[dev-dependencies]
dmntk-recognizer = { path = "../recognizer" }