[package]
name = "dmntk-model-evaluator"
version = "0.0.44-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = { path = "../common" }
dmntk-feel = { path = "../feel" }
dmntk-feel-evaluator = { path = "../feel-evaluator" }
dmntk-feel-parser = { path = "../feel-parser" }
dmntk-model = { path = "../model" }
dmntk-recognizer = { path = "../recognizer" }
thiserror = "1.0.30"

[dev-dependencies]
dmntk-examples = { path = "../examples" }
lazy_static = "1.4.0"