[package]
name = "dmntk-model-evaluator"
version = "0.0.45"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = "0.0.44"
dmntk-feel = "0.0.44"
dmntk-feel-evaluator = "0.0.44"
dmntk-feel-parser = "0.0.44"
dmntk-model = "0.0.44"
dmntk-recognizer = "0.0.44"
thiserror = "1.0.30"

[dev-dependencies]
dmntk-examples = { path = "../examples" }
lazy_static = "1.4.0"