[package]
name = "dmntk-model"
version = "0.0.43-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | DMN model and parser"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = { path = "../common" }
dmntk-examples = { path = "../examples" }
dmntk-feel = { path = "../feel" }
dmntk-feel-parser = { path = "../feel-parser" }
roxmltree = "0.14.1"