[package]
name = "dmntk-model"
version = "0.0.46"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | DMN model and parser"
documentation = "https://docs.rs/dmntk-model"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = "0.0.45"
dmntk-examples = "0.0.45"
dmntk-feel = "0.0.45"
dmntk-feel-parser = "0.0.45"
roxmltree = "0.14.1"