[package]
name = "dmntk-recognizer"
version = "0.0.45-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Decision table recognizer"
documentation = "https://docs.rs/dmntk-recognizer"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = { path = "../common" }
dmntk-model = { path = "../model" }