[package]
name = "dmntk-recognizer"
version = "0.0.46"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Decision table recognizer"
documentation = "https://docs.rs/dmntk-recognizer"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = "0.0.45"
dmntk-model = "0.0.45"