[package]
name = "dmntk-server"
version = "0.0.44-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | API server"
documentation = "https://docs.rs/dmntk-server"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
actix-web = "3.3.2"
base64 = "0.13.0"
dmntk-common = { path = "../common" }
dmntk-evaluator = { path = "../evaluator" }
dmntk-feel = { path = "../feel" }
dmntk-feel-parser = { path = "../feel-parser" }
dmntk-model = { path = "../model" }
dmntk-workspace = { path = "../workspace" }
serde = "1.0.130"
serde_derive = "1.0.130"
thiserror = "1.0.30"