[package]
name = "dmntk-server"
version = "0.0.44"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | API server"
documentation = "https://docs.rs/dmntk-server"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
actix-web = "3.3.2"
base64 = "0.13.0"
dmntk-common = "0.0.44"
dmntk-evaluator = "0.0.44"
dmntk-feel = "0.0.44"
dmntk-feel-parser = "0.0.44"
dmntk-model = "0.0.44"
dmntk-workspace = "0.0.44"
serde = "1.0.130"
serde_derive = "1.0.130"
thiserror = "1.0.30"