[package]
name = "dmntk-workspace"
version = "0.0.45-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Workspace"
documentation = "https://docs.rs/dmntk-workspace"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = { path = "../common" }
dmntk-evaluator = { path = "../evaluator" }
dmntk-feel = { path = "../feel" }
dmntk-model = { path = "../model" }
thiserror = "1.0.30"
