[package]
name = "dmntk-workspace"
version = "0.0.45"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Workspace"
documentation = "https://docs.rs/dmntk-workspace"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = "0.0.44"
dmntk-evaluator = "0.0.44"
dmntk-feel = "0.0.44"
dmntk-model = "0.0.44"
thiserror = "1.0.30"
walkdir = "2.3.2"

[dev-dependencies]
dmntk-examples = { path = "../examples" }