[package]
name = "dmntk-workspace"
version = "0.0.47-dev"
authors = ["Dariusz Depta <dariusz.depta@dmntk.io>"]
description = "DMNTK | Workspace"
documentation = "https://docs.rs/dmntk-workspace"
repository = "https://github.com/dmntk/dmntk.rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dmntk-common = { path = "../common" }
dmntk-feel = { path = "../feel" }
dmntk-feel-evaluator = { path = "../feel-evaluator" }
dmntk-model = { path = "../model" }
dmntk-model-evaluator = { path = "../model-evaluator" }
thiserror = "1.0.30"
walkdir = "2.3.2"

[dev-dependencies]
dmntk-examples = { path = "../examples" }